--- a/src/components/NewEntry/Newentry.css
+++ b/src/components/NewEntry/Newentry.css
@@ -47,6 +47,7 @@ form {
     font-size: 1.2rem;
 
     label {
+      user-select: none;
       padding: 0.2rem 0 0.2rem 0.5rem;
       letter-spacing: 1px;
     }
