new update Bigcard

--- a/src/components/bigCard.css
+++ b/src/components/bigCard.css
@@ -20,7 +20,7 @@
 
 #modal-header-outer {
   background-size: cover;
-  background-image: url("./Bunt.jpg");
+  background-image: url("../assets/Bunt.jpg");
   border-top-right-radius: 1rem;
   border-top-left-radius: 1rem;
   background-color: aliceblue;
