--- a/src/components/ListContainer/ListContainer.css
+++ b/src/components/ListContainer/ListContainer.css
@@ -8,7 +8,7 @@
   border-radius: 2rem;
   box-shadow: 0.5rem 0.5rem 12px rgb(48, 51, 83);
   background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
-  max-width: 1000px;
+  max-width: 100%;
   margin: 0 auto;
   #control {
     text-align: center;
@@ -46,7 +46,6 @@
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 2rem;
-  max-width: 1000px;
   margin: 0 auto;
   padding: 2rem;
 }
