--- a/src/components/BigCard/bigCard.css
+++ b/src/components/BigCard/bigCard.css
@@ -1,45 +1,133 @@
-#modal-container {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
+main {
+  position: absolute;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  right: 0;
+  top: -1.5rem;
+  bottom: 0;
+  height: 100vh;
+  padding: 2rem;
 }
 
-#modal {
-  max-width: 50%;
-  min-width: 16rem;
-  margin: 0 auto;
-  background-color: white;
+#bigCard {
+  position: relative;
+  max-width: 600px;
+  width: 100%;
   border-radius: 1rem;
+  border: 4px solid rgb(6, 105, 180);
+  box-shadow: 1rem 1rem 12px rgb(48, 51, 83);
+  padding: 1rem 2rem;
+  margin: 0 auto 4rem auto;
+
+  background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
 }
 
-#modal-header-outer {
-  background-size: cover;
-  border-top-right-radius: 1rem;
-  border-top-left-radius: 1rem;
-  background-color: aliceblue;
+#bigCard-control {
+  position: relative;
+  height: 3rem;
+  width: 100%;
+  /* background-color: green; */
+
+  #btnClose {
+    position: absolute;
+    display: block;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    font-size: 1.5rem;
+    line-height: 20px;
+    right: -1rem;
+    border: 0.2rem solid rgb(4, 71, 158);
+    padding: 0;
+
+    background-color: rgb(6, 105, 180);
+    background-size: 200%;
+    background-image: linear-gradient(
+      to right,
+      rgba(6, 105, 180, 1) 10%,
+      rgba(88, 147, 192, 0.5) 50%,
+      rgba(6, 105, 180, 0.5) 90%
+    );
+
+    color: white;
+    background-position: 0% 100%;
+    transition: 0.3s all;
+    &:hover {
+      border: 0.2rem solid rgb(9, 44, 90);
+      background-position: 100% 0%;
+      box-shadow: 0.2rem 0.2rem 8px rgb(25, 27, 43);
+    }
+  }
 }
 
-#modal-header {
-  height: 16rem;
-  margin-bottom: 1.75rem;
-  padding: 1.5rem;
+#bigCard-image {
+  display: block;
+  width: 100%;
+  margin-bottom: 1rem;
+
+  img {
+    display: block;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 1rem;
+    box-shadow: 0.2rem 0.2rem 1rem black;
+  }
 }
 
-#modal-content {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  padding-bottom: 1rem;
-}
-
-#btnClose {
-  display: flex;
-  justify-self: flex-end;
-  padding-right: 0.75rem;
+#bigCard-title {
+  position: relative;
+  display: block;
+  padding: 1rem 1rem 2rem 1rem;
+  border-radius: 1rem 1rem 0 0;
+  background-color: whitesmoke;
   font-size: 1.5rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+
+  #bigCard-subtitle {
+    position: absolute;
+    left: 1rem;
+    bottom: 0.4rem;
+    font-size: 0.8rem;
+    font-weight: bold;
+  }
+}
+
+#bigCard-message {
+  overflow: hidden;
+  border-radius: 0 0 1rem 1rem;
+  margin-bottom: 1rem;
+  p {
+    padding: 0 1rem 1rem 1rem;
+    background-color: whitesmoke;
+  }
+}
+
+#bigCard-footer {
+  text-align: center;
+  button {
+    max-width: 200px;
+    margin: 0 auto;
+    padding: 1rem 2rem;
+    background-color: rgb(6, 105, 180);
+    background-size: 200%;
+    border: 0.2rem solid rgb(4, 71, 158);
+
+    background-image: linear-gradient(
+      to right,
+      rgba(6, 105, 180, 1) 10%,
+      rgba(88, 147, 192, 0.5) 50%,
+      rgba(6, 105, 180, 0.5) 90%
+    );
+
+    color: white;
+    border-radius: 1rem 2rem;
+    background-position: 0% 100%;
+    transition: 0.3s all;
+
+    &:hover {
+      border: 0.2rem solid rgb(9, 44, 90);
+      background-position: 100% 0%;
+      box-shadow: 0.2rem 0.2rem 8px rgb(25, 27, 43);
+    }
+  }
 }
