--- a/src/components/ListContainer/ListContainer.css
+++ b/src/components/ListContainer/ListContainer.css
@@ -2,16 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-#list-container {
+#content-container {
+  position: absolute;
   padding: 2rem;
   border: 4px solid rgb(6, 105, 180);
   border-radius: 2rem;
   box-shadow: 0.5rem 0.5rem 12px rgb(48, 51, 83);
   background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
-  max-width: 100%;
+  max-width: 1000px;
   margin: 0 auto;
-  #control {
+  height: max-content;
+
+  * {
+    position: relative;
+  }
+
+  #control-row {
     text-align: center;
+    margin-bottom: 1rem;
+
     button {
       max-width: 200px;
       margin: 0 auto;
@@ -41,11 +50,11 @@
   }
 }
 
-#entry-list {
+#list-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   gap: 2rem;
+  padding: 1rem;
   margin: 0 auto;
-  padding: 2rem;
 }
